fix alignments and make lists scroll inline

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
   margin: 0;
 }
 
-body {
+body, html {
   font-family: "Myriad Pro", 'Helvetica Neue', 'Arial', sans-serif;
   color: #616161;
   background-color: #E4E4E4;
+  height: 100%;
 }
 
 h4 {
@@ -52,7 +53,8 @@ h4 {
 }
 
 .PR > h1 {
-  padding: 25px 0 4px 50px;
+  padding: 25px 0 4px 0;
+  text-align: center;
   margin: 0;
   border-bottom-style: solid;
   border-bottom-width: 5px;
@@ -60,7 +62,8 @@ h4 {
 }
 
 .ACT > h1 {
-  padding: 25px 0 4px 50px;
+  padding: 25px 0 4px 0;
+  text-align: center;
   margin: 0;
   border-bottom-style: solid;
   border-bottom-width: 5px;
@@ -68,7 +71,8 @@ h4 {
 }
 
 .gitter > h1 {
-  padding: 25px 0 4px 50px;
+  padding: 25px 0 4px 0;
+  text-align: center;
   margin: 0;
   border-bottom-style: solid;
   border-bottom-width: 5px;
@@ -197,9 +201,10 @@ a.button.active {
   font-weight: 200;
   background-color: white;
   padding: 10px;
-  margin: 10px;
+  margin: 15px 15px;
   border-radius: 5px;
   font-size: 20px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16);
 }
 
 .pull-request {
@@ -210,17 +215,23 @@ a.button.active {
 }
 
 #gitter {
-  height: 950px;
-  width: 99%;
+  height: 920px;
+  width: 100%;
   border: none;
   align-self: center;
   border-radius: 5px;
-  margin-top: 10px;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16);
 }
 
-.gitter {
+.colcontainer {
+    width: 33.333333333333333333%;
+    height: 100%;
+    overflow-y: scroll;
+    position: fixed;
+}
 
+.gitter > .colcontainer {
+    padding: 15px 12px;
 }
 
 .content {
